--- a/templates/index.template.html
+++ b/templates/index.template.html
@@ -1,17 +1,10 @@
+{% extends "base.html" %}
+
 {% load static %}
+{% block content %}
 
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="{% static 'style/styles.css' %}" type="text/css" />
-
-    <title>Document</title>
-</head>
-<body>
   <h1>Index</h1>  
   <img src="{% static 'images/whitestrat.jpg' %}"></img>
-</body>
-</html>
+  
+{% endblock %}
+
