--- a/templates/show_guitars.html
+++ b/templates/show_guitars.html
@@ -8,6 +8,7 @@
     <br>
     Price:SGD${{guitar.cost}}</li>
     <a href="{% url 'update_guitar' guitar_id=guitar.id %}">Edit</a>
+    <a href="{% url 'confirm_delete_guitar' guitar_id=guitar.id %}">Delete</a>
     <br>
     <br>
     {% endfor %}
