--- a/templates/create_guitar.html
+++ b/templates/create_guitar.html
@@ -1,8 +1,8 @@
 {% extends "base.html" %} {% block content %}
 
 <h1>Create Guitar</h1>
-
-    <form method='POST'>
+{{ form.media }}
+    <form method='POST' enctype="multipart/form-data">
         {% csrf_token %}
         {{ form.as_p }}
         <input type='submit' value='Create Guitar'/>
