--- a/templates/base.html
+++ b/templates/base.html
@@ -51,7 +51,22 @@
         </div>
     </nav>
 
-    {% block content %}{%endblock%}
+  <div class="container-fluid">
+    <hr> {% if messages %}
+    <div class="alert alert-success"  \role="alert">
+      <div>
+        {% for message in messages %} {{ message }} {% endfor %}
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+    <span aria-hidden="true">&times;</span>
+  </button>
+      </div>
+      {% endif %}
+    </div>
+  </div>
+  
+    <div class='container'>
+        {%block content%}{%endblock%}
+    </div>
 
     <div class="container-fluid">
         <footer class="page-footer">
