--- a/templates/show_guitars.html
+++ b/templates/show_guitars.html
@@ -1,6 +1,10 @@
 {% extends "base.html" %} {% block content %}
-
+{% load crispy_forms_tags %}
 <h1>Show Guitars</h1>
+ <form method='GET'>
+        {{ search_form|crispy}}
+        <input type='submit' value='Search'/>
+    </form>
 
 <ul>
     {% for guitar in all_guitars %}
