Added Shopfront pic

--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,7 @@
 {% block content %}
 
   <h1>Index</h1>  
-  <img src="{% static 'images/whitestrat.jpg' %}"></img>
+  <img src="{% static 'images/Shopfront.jpg' %}"></img>
   
 {% endblock %}
 
