--- a/templates/checkout.html
+++ b/templates/checkout.html
@@ -10,7 +10,7 @@
       // Make the id field from the Checkout Session creation API response
       // available to this file, so you can provide it as parameter here
       // instead of the {{CHECKOUT_SESSION_ID}} placeholder.
-      sessionId: '{{session_id}'
+      sessionId: '{{session_id}}'
     }).then(function (result) {
       // If `redirectToCheckout` fails due to a browser or network
       // error, display the localized error message to your customer
