--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,7 @@
 
 {% block content %}
 
-  <h1>Index</h1>  
+  <h1>Welcome To Jimbo Guitars</h1>  
   <img src="{% static 'images/Shopfront.jpg' %}"></img>
   
 {% endblock %}
