--- a/templates/base.html
+++ b/templates/base.html
@@ -21,7 +21,8 @@
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
     <div class="container">
-      <a class="navbar-brand" href="#">Welcome to Jimbo Guitars</a>
+      <img class="nav-item" src="/static/images/JG logo.png" alt="#"></a>
+      <a class="navbar-brand" href="#">Jimbo Guitars</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
