Added product template to show_guitars

--- a/templates/index.html
+++ b/templates/index.html
@@ -64,18 +64,18 @@
         <p>Our vast selection of used and vintage guitars and amps includes Fender, Gibson, Gretsch and many other brands. We also carry many Japanese vintage electric guitars from the 80’s. We pay top dollar
           for used and vintage guitars and amps etc and members can list your instruments for sale via our online shop. Tell us what you’ve got! We offer FREE appraisals for your used and vintage instruments by our certified vintage expert.</p>
       </div>
-
+      
+      <h4>Featured Products - Please call us for enquiry and private viewing</h4>
       <div class="row">
-
         <div class="col-lg-4 col-md-6 mb-4">
           <div class="card h-100">
             <a href="#"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
             <div class="card-body">
               <h4 class="card-title">
-                <a href="#">Item One</a>
+                <a href="#">1964 Fender Stratocaster</a>
               </h4>
-              <h5>$24.99</h5>
-              <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet numquam aspernatur!</p>
+              <h5>$32,950</h5>
+              <p class="card-text">Year: 1964<br>Condition: Very Good<br>Case: Original Hard Shell Case</p>
             </div>
             <div class="card-footer">
               <small class="text-muted">&#9733; &#9733; &#9733; &#9733; &#9734;</small>
