--- a/templates/show_guitars.html
+++ b/templates/show_guitars.html
@@ -5,56 +5,22 @@
 	<input type='submit' value='Search' />
 </form>
 
-<!--<ul>-->
-<!--    {% for guitar in all_guitars %}-->
-<!--        {%if guitar.image %}-->
-<!--        <img src="{{guitar.image.cdn_url}}"/>-->
-<!--        {%endif%}-->
-
-<!--    <li>Brand: {{guitar.brand}}</li>-->
-<!--    <li>Model: {{guitar.model}}</li>-->
-<!--    <li>Color: {{guitar.color}}</li>-->
-<!--    <li>Price: SGD${{guitar.cost}}</li>-->
-<!--    <li>Stock Left: {{guitar.stockrem}}</li>-->
-<!--    <a href="{% url 'add_to_cart' guitar_id=guitar.id %}">Add to Cart</a><br>-->
-<!--    <a href="{% url 'update_guitar' guitar_id=guitar.id %}">Edit</a><br>-->
-<!--    <a href="{% url 'confirm_delete_guitar' guitar_id=guitar.id %}">Delete</a><br>-->
-<!--    {% endfor %}-->
-<!--</ul>-->
-
-<!--Bootstrap Product Page template -->
-
 <div class="container-fluid">
-	{% for guitar in all_guitars %}
+	{% for guitar in all_guitars %} {% empty %}
+	<h1>No results</h1>
+	{% endfor %} {% for guitar in all_guitars %}
 	<div class="content-wrapper">
 		<div class="item-container">
 			<div class="container">
 				<div class="col-md-12">
 					<div class="product col-md-3 service-image-left">
-
 						<center>
 							{%if guitar.image %}
-
 							<img id="item-display" src="{{guitar.image.cdn_url}}" alt=""></img>
 							{%endif%}
 						</center>
 					</div>
-
-					<!--<div class="container service1-items col-sm-2 col-md-2 pull-left">-->
-					<!--	<center>-->
-					<!--		<a id="item-1" class="service1-item">-->
-					<!--			<img src="http://www.corsair.com/Media/catalog/product/g/s/gs600_psu_sideview_blue_2.png" alt=""></img>-->
-					<!--		</a>-->
-					<!--		<a id="item-2" class="service1-item">-->
-					<!--			<img src="http://www.corsair.com/Media/catalog/product/g/s/gs600_psu_sideview_blue_2.png" alt=""></img>-->
-					<!--		</a>-->
-					<!--		<a id="item-3" class="service1-item">-->
-					<!--			<img src="http://www.corsair.com/Media/catalog/product/g/s/gs600_psu_sideview_blue_2.png" alt=""></img>-->
-					<!--		</a>-->
-					<!--	</center>-->
-					<!--</div>-->
 				</div>
-
 				<div class="col-md-7">
 					<div class="product-title">{{guitar.brand}}</div>
 					<div class="product-desc">{{guitar.model}}</div>
@@ -67,70 +33,21 @@
 					<div class="btn-group cart">
 						<a href="{% url 'add_to_cart' guitar_id=guitar.id %}" class="btn btn-success">Add to Cart</a>
 						<a href="{% url 'update_guitar' guitar_id=guitar.id %}" class="btn btn-primary">Edit</a>
-						<!--<button type="button" class="btn btn-success">-->
-						<!--	Add to cart -->
-						<!--</button>-->
 					</div>
 					<div class="btn-group wishlist">
 						<a href="{% url 'confirm_delete_guitar' guitar_id=guitar.id %}" class="btn btn-danger">Delete</a>
-						<!--<button type="button" class="btn btn-danger">-->
-						<!--	Add to wishlist -->
-						<!--</button>-->
 					</div>
-
-
-
 				</div>
 			</div>
 		</div>
 		<div class="container-fluid">
 			<div class="col-md-12 product-info">
 				<ul id="myTab" class="nav nav-tabs nav_tabs">
-
 					<li class="active"><a href="#service-one" data-toggle="tab">DESCRIPTION</a></li>
-					<!--<li><a href="#service-two" data-toggle="tab">PRODUCT INFO</a></li>-->
-					<!--<li><a href="#service-three" data-toggle="tab">REVIEWS</a></li>-->
-
 				</ul>
 				<div class="guitar_desc">
-						<p>{{guitar.desc}}</p>
-					
+					<p>{{guitar.desc}}</p>
 				</div>
-				
-				
-				<!--<div id="myTabContent" class="tab-content">-->
-				<!--	<div class="tab-pane fade in active" id="service-one">-->
-
-				<!--		<section class="container product-info">-->
-							<!--The Corsair Gaming Series GS600 power supply is the ideal price-performance solution for building or upgrading a Gaming PC. A single +12V rail provides up to 48A of reliable, continuous power for multi-core gaming PCs with multiple graphics cards. The ultra-quiet, dual ball-bearing fan automatically adjusts its speed according to temperature, so it will never intrude on your music and games. Blue LEDs bathe the transparent fan blades in a cool glow. Not feeling blue? You can turn off the lighting with the press of a button.-->
-
-							<!--<h3>Corsair Gaming Series GS600 Features:</h3>-->
-							<!--<li>It supports the latest ATX12V v2.3 standard and is backward compatible with ATX12V 2.2 and ATX12V 2.01 systems</li>-->
-							<!--<li>An ultra-quiet 140mm double ball-bearing fan delivers great airflow at an very low noise level by varying fan speed in response to temperature</li>-->
-							<!--<li>80Plus certified to deliver 80% efficiency or higher at normal load conditions (20% to 100% load)</li>-->
-							<!--<li>0.99 Active Power Factor Correction provides clean and reliable power</li>-->
-							<!--<li>Universal AC input from 90~264V — no more hassle of flipping that tiny red switch to select the voltage input!</li>-->
-							<!--<li>Extra long fully-sleeved cables support full tower chassis</li>-->
-							<!--<li>A three year warranty and lifetime access to Corsair’s legendary technical support and customer service</li>-->
-							<!--<li>Over Current/Voltage/Power Protection, Under Voltage Protection and Short Circuit Protection provide complete component safety</li>-->
-							<!--<li>Dimensions: 150mm(W) x 86mm(H) x 160mm(L)</li>-->
-							<!--<li>MTBF: 100,000 hours</li>-->
-							<!--<li>Safety Approvals: UL, CUL, CE, CB, FCC Class B, TÜV, CCC, C-tick</li>-->
-				<!--		</section>-->
-
-				<!--	</div>-->
-				<!--	<div class="tab-pane fade" id="service-two">-->
-
-				<!--		<section class="container">-->
-
-				<!--		</section>-->
-
-				<!--	</div>-->
-				<!--	<div class="tab-pane fade" id="service-three">-->
-
-				<!--	</div>-->
-				<!--</div>-->
-				
 				<hr>
 			</div>
 		</div>
