User login and out ok

--- a/static/style/styles.css
+++ b/static/style/styles.css
@@ -140,7 +140,15 @@
 
 
 /* Jimbo's*/
+.signup {
+	margin-top: 10rem;
+}
+
 .login {
+	margin-top: 10rem;
+}
+
+.profile {
 	margin-top: 10rem;
 }
 
