--- a/templates/base.html
+++ b/templates/base.html
@@ -57,14 +57,22 @@
         </button>
           <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
             <li class="nav-item">
+              {% if not user.is_authenticated %}
               <a class="nav-link" href="{% url 'signup' %}">Signup</a>
             </li>
              <li class="nav-item">
               <a class="nav-link" href="{% url 'login' %}">Login</a>
             </li>
+              {% endif %}
+              
+              {% if user.is_authenticated %}
+            <li class="nav-item">
+              <a class="nav-link" href="{% url 'profile' %}">Profile</a>
+            </li>
             <li class="nav-item">
               <a class="nav-link" href="{% url 'logout' %}">Logout</a>
             </li>
+            {% endif %}
           </div>
         </div>
 
