--- a/templates/profile.html
+++ b/templates/profile.html
@@ -1,6 +1,8 @@
 {% extends 'base.html' %}
 
 {%block content %}
+<div class="profile">
 <h1>Profile</h1>
 <p>Username: {{current_user.username}}</p>
+</div>
 {%endblock%}
