--- a/users/templates/users/signup.html
+++ b/users/templates/users/signup.html
@@ -3,10 +3,12 @@
 {% load crispy_forms_tags %}
 
 {% block content %}
+<div class="signup">
   <h2>Sign up</h2>
   <form method="post">
     {% csrf_token %}
     {{ form|crispy }}
     <button type="submit">Sign up</button>
   </form>
+  </div>
 {% endblock %}
