Fixed Checkout Quantity

--- a/templates/base.html
+++ b/templates/base.html
@@ -39,7 +39,7 @@
             <a class="nav-link" href="{% url 'show_guitars' %}">Shop</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Services</a>
+            <a class="nav-link" href="create_guitars">Sell</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">About</a>
