--- a/templates/view_cart.html
+++ b/templates/view_cart.html
@@ -3,7 +3,7 @@
 <ul>
     {%for id,guitar in shopping_cart.items %}
     <li>
-        <img src="{{guitar.image_url}}" /> {{guitar.brand}} ${{guitar.cost}} Quantity: {{guitar.quantity}}
+        <img src="{{guitar.image_url}}" /> {{guitar.brand}} ${{guitar.cost}}
 
         <form class="form-inline" method="post" action="{% url 'adjust_cart' guitar_id=guitar.id %}">
             {% csrf_token %}
@@ -13,7 +13,7 @@
                     <!--&nbsp;-->
                     <!--<div class="container"></div>-->
                     <div class="input-group-addon cart_div">Quantity to change to:&nbsp&nbsp&nbsp</div>
-                    <input name="quantity" type="number" min="0" max="999" class="form-control" id="input_width" value="{{guitar.quantity}}">
+                    <input name="quantity" type="number" min="1" max="10" class="form-control" id="input_width" value="{{guitar.quantity}}">
                 </div>
             </div>
             <button type="submit" class="btn btn-primary" id="cart_btn_primary_id"><span class="glyphicon glyphicon-edit" aria-hidden="true"></span> &nbsp; Apply</button>
