--- a/templates/base.html
+++ b/templates/base.html
@@ -28,10 +28,10 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
-           <form class="form-inline my-2 my-lg-0">
-          <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-          <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-        </form>
+          <form class="form-inline my-2 my-lg-0">
+            <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+            <button class="btn btn-outline-success my-2 my-sm-0" type="submit"><i class="fas fa-search"></i></button>
+          </form>
           <li class="nav-item">
             <a class="nav-link" href="{% url 'home' %}">Home</a>
           </li>
@@ -39,13 +39,10 @@
             <a class="nav-link" href="{% url 'show_guitars' %}">Shop</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="create_guitars">Sell</a>
+            <a class="nav-link" href="{% url 'create_guitars' %}">Sell</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">About</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Contact</a>
+            <a class="nav-link" href="{% url 'about_us' %}">About Us</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="{% url 'view_cart' %}">Shopping Cart ({{number_of_items}})</a>
@@ -60,12 +57,10 @@
               {% if not user.is_authenticated %}
               <a class="nav-link" href="{% url 'signup' %}">Signup</a>
             </li>
-             <li class="nav-item">
+            <li class="nav-item">
               <a class="nav-link" href="{% url 'login' %}">Login</a>
             </li>
-              {% endif %}
-              
-              {% if user.is_authenticated %}
+            {% endif %} {% if user.is_authenticated %}
             <li class="nav-item">
               <a class="nav-link" href="{% url 'profile' %}">Profile</a>
             </li>
