Test Fender Heroku link

--- a/templates/index.html
+++ b/templates/index.html
@@ -22,7 +22,7 @@
 
       <h1 class="my-4">Brands</h1>
       <div class="list-group">
-        <a href="#" class="list-group-item">Fender</a>
+        <a href="https://jimboguitars.herokuapp.com/show_guitars/?search_terms=Fender&min_cost=&max_cost=" class="list-group-item">Fender</a>
         <a href="#" class="list-group-item">Gibson</a>
         <a href="#" class="list-group-item">Others</a>
       </div>
