Edited Brand links hrefs

--- a/templates/index.html
+++ b/templates/index.html
@@ -15,23 +15,19 @@
 
 <!-- Page Content -->
 <div class="container">
-
   <div class="row">
-
     <div class="col-lg-3">
-
       <h1 class="my-4">Brands</h1>
       <div class="list-group">
         <a href="https://jimboguitars.herokuapp.com/show_guitars/?search_terms=Fender&min_cost=&max_cost=" class="list-group-item">Fender</a>
-        <a href="#" class="list-group-item">Gibson</a>
-        <a href="#" class="list-group-item">Others</a>
+        <a href="https://jimboguitars.herokuapp.com/show_guitars/?search_terms=Gibson&min_cost=&max_cost=" class="list-group-item">Gibson</a>
+        <a href="https://jimboguitars.herokuapp.com/show_guitars/?search_terms=Gretch&min_cost=&max_cost=" class="list-group-item">Gretch</a>
+        <a href="https://jimboguitars.herokuapp.com/show_guitars/?search_terms=Martin&min_cost=&max_cost=" class="list-group-item">Martin</a>
+        <a href="https://jimboguitars.herokuapp.com/show_guitars/?search_terms=Taylor&min_cost=&max_cost=" class="list-group-item">Taylor</a>
       </div>
-
     </div>
-    <!-- /.col-lg-3 -->
 
     <div class="col-lg-9">
-
       <div id="carouselExampleIndicators" class="carousel slide my-4" data-ride="carousel">
         <ol class="carousel-indicators">
           <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
@@ -61,10 +57,10 @@
 
       <div>
         <h4>Welcome to Jimbo Guitars</h4>
-        <p>Our vast selection of used and vintage guitars and amps includes Fender, Gibson, Gretsch and many other brands. We also carry many Japanese vintage electric guitars from the 80’s. We pay top dollar
-          for used and vintage guitars and amps etc and members can list your instruments for sale via our online shop. Tell us what you’ve got! We offer FREE appraisals for your used and vintage instruments by our certified vintage expert.</p>
+        <p>Our vast selection of used and vintage guitars and amps includes Fender, Gibson, Gretsch and many other brands. We also carry many Japanese vintage electric guitars from the 80’s. We pay top dollar for used and vintage guitars and amps etc and
+          members can list your instruments for sale via our online shop. Tell us what you’ve got! We offer FREE appraisals for your used and vintage instruments by our certified vintage expert.</p>
       </div>
-      
+
       <h4>Featured Products - Please call us for enquiry and private viewing</h4>
       <div class="row">
         <div class="col-lg-4 col-md-6 mb-4">
