Have a kit kat break

--- a/templates/index.html
+++ b/templates/index.html
@@ -22,7 +22,7 @@
         <a href="https://jimboguitars.herokuapp.com/show_guitars/?search_terms=Fender&min_cost=&max_cost=" class="list-group-item">Fender</a>
         <a href="https://jimboguitars.herokuapp.com/show_guitars/?search_terms=Gibson&min_cost=&max_cost=" class="list-group-item">Gibson</a>
         <a href="https://jimboguitars.herokuapp.com/show_guitars/?search_terms=Gretch&min_cost=&max_cost=" class="list-group-item">Gretch</a>
-        <a href="https://jimboguitars.herokuapp.com/show_guitars/?search_terms=Martin&min_cost=&max_cost=" class="list-group-item">Martin</a>
+        <a href="https://jimboguitars.herokuapp.com/show_guitars/?search_terms=Martin&min_cost=&max_cost=" class="list-group-item">Martin&Co</a>
         <a href="https://jimboguitars.herokuapp.com/show_guitars/?search_terms=Taylor&min_cost=&max_cost=" class="list-group-item">Taylor</a>
       </div>
     </div>
