--- a/templates/base.html
+++ b/templates/base.html
@@ -22,7 +22,7 @@
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
     <div class="container">
       <img class="nav-item" src="/static/images/JG logo.png" alt="#"></a>
-      <a class="navbar-brand" href="#"> Welcome to Jimbo Guitars</a>
+      <a class="navbar-brand" href="{% url 'home' %}"> Welcome to Jimbo Guitars</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
