--- a/templates/create_guitar.html
+++ b/templates/create_guitar.html
@@ -1,15 +1,12 @@
-{% extends "base.html" %} 
+{% extends "base.html" %} {% load crispy_forms_tags %} {% block content %}
 
-{% load crispy_forms_tags %}
-
-{% block content %}
-
-<h1>Create Guitar</h1>
-{{ form.media }}
+<div class="container-fluid">
+    <h1>Sell</h1>
+    {{ form.media }}
     <form method='POST' enctype="multipart/form-data">
-        {% csrf_token %}
-        {{ form|crispy}}
-        <input type='submit' value='Create Guitar'/>
+        {% csrf_token %} {{ form|crispy}}
+        <input type='submit' value='Create Guitar' />
     </form>
+</div>
 
 {% endblock %}
