Edited Sell Guitar html

--- a/static/style/styles.css
+++ b/static/style/styles.css
@@ -168,6 +168,14 @@
 	margin-top: 10rem;
 }
 
-.bg {
-  background-image: url(/static/images/Shop background copy.jpg);
+.aboutus {
+	margin-top: 10rem;
+}
+
+.sellguitar {
+	margin-top: 10rem;
+}
+
+.sell_cond{
+	margin-top: 5rem;
 }
