--- a/templates/about_us.html
+++ b/templates/about_us.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %} {%block content %}
 
 <div class="container-fluid aboutus">
-    <div class="container about_img">
+    <div class="container">
         <img src="/static/images/Shop.jpg" alt="">
     </div>
     <h1>About Us</h1>
