--- a/templates/index.html
+++ b/templates/index.html
@@ -14,7 +14,7 @@
 
 <div class="container-fluid">
   <div class="row">
-    <div class="col-lg-3">
+    <div class="col-lg-3 d-none d-lg-block">
       <h3 class="my-4">Shop by brand</h3>
       <div class="list-group">
         <a href="https://jimboguitars.herokuapp.com/show_guitars/?search_terms=Fender&min_cost=&max_cost=" class="list-group-item">Fender</a>
@@ -67,7 +67,7 @@
               <a href="#"><img class="card-img-top" src="/static/images/Featured-1964Strat.jpg" alt=""></a>
               <div class="card-body">
                 <h4 class="card-title">
-                  <a href="#">1964 Fender Stratocaster</a>
+                  <p>1964 Fender Stratocaster</p>
                 </h4>
                 <h5>$32,950</h5>
                 <p class="card-text">Year: 1964<br>Condition: Very Good<br>Case: Original Hard Shell Case</p>
@@ -83,7 +83,7 @@
               <a href="#"><img class="card-img-top" src="/static/images/Featured-1956LPGoldTop.jpg" alt=""></a>
               <div class="card-body">
                 <h4 class="card-title">
-                  <a href="#">1956 Gibson Les Paul Goldtop</a>
+                  <p>1956 Gibson Les Paul Goldtop</p>
                 </h4>
                 <h5>$35,995</h5>
                 <p class="card-text">Year: 1956<br>Condition: Very Good<br>Case: Original Hard Shell Case</p>
@@ -99,7 +99,7 @@
               <a href="#"><img class="card-img-top" src="/static/images/Featured-1962GLPSSG.jpg" alt=""></a>
               <div class="card-body">
                 <h4 class="card-title">
-                  <a href="#">1962 Gibson Les Paul Standard (SG)</a>
+                  <p>1962 Gibson Les Paul Standard (SG)</p>
                 </h4>
                 <h5>$24,955</h5>
                 <p class="card-text">Year: 1962<br>Condition: Very Good<br>Case: Original Hard Shell Case</p>
@@ -115,7 +115,7 @@
               <a href="#"><img class="card-img-top" src="/static/images/Featured-1940MartinD28.jpg" alt=""></a>
               <div class="card-body">
                 <h4 class="card-title">
-                  <a href="#">1940 Martin D-28</a>
+                  <p>1940 Martin D-28</p>
                 </h4>
                 <h5>$88,950</h5>
                 <p class="card-text">Year: 1940<br>Condition: Very Good<br>Case: Hard Shell Case</p>
@@ -131,7 +131,7 @@
               <a href="#"><img class="card-img-top" src="/static/images/Featured-1958GFVK.jpg" alt=""></a>
               <div class="card-body">
                 <h4 class="card-title">
-                  <a href="#">1958 Gibson <br>Flying V</a>
+                  <p>1958 Gibson <br>Flying V</p>
                 </h4>
                 <h5>$410,000</h5>
                 <p class="card-text">Year: 1940<br>Condition: Very Good<br>Case: Original Hard Shell Case</p>
@@ -147,7 +147,7 @@
               <a href="#"><img class="card-img-top" src="/static/images/Featured-1955StratBlonde.jpg" alt=""></a>
               <div class="card-body">
                 <h4 class="card-title">
-                  <a href="#">1956 Fender Stratocaster Hardtail Blonde</a>
+                  <p>1956 Fender Stratocaster Hardtail Blonde</p>
                 </h4>
                 <h5>$56.950</h5>
                 <p class="card-text">Year: 1955<br>Condition: Very Good<br>Case: Original Hard Shell Case</p>
