--- a/templates/base.html
+++ b/templates/base.html
@@ -17,28 +17,34 @@
 </head>
 
 <body>
+    <div class="container-fluid">
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
-    <div class="container">
       <img class="nav-item" src="/static/images/JG logo.png" alt="#"></a>
-      <a class="navbar-brand" href="{% url 'home' %}"> Welcome to Jimbo Guitars</a>
+      <a class="navbar-brand" href="{% url 'home' %}">Jimbo Guitars</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
-          <form class="form-inline my-2 my-lg-0">
-            <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-            <button class="btn btn-outline-success my-2 my-sm-0" type="submit"><i class="fas fa-search"></i></button>
-          </form>
+          <!--<form class="form-inline my-2 my-lg-0" method='GET'>-->
+          <!--  <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">-->
+          <!--  <button class="btn btn-outline-success my-2 my-sm-0" type="submit"><i class="fas fa-search"></i></button>-->
+          <!--</form>-->
+          <form method="GET" class="form-inline" action="{% url 'show_guitars' %}">
+          <input name="search_terms" class="form-control mr-sm-2" type="search" placeholder="Search for Guitars">
+          <button class="btn btn-outline-success" type="submit"><i class="fas fa-search"></i></button>
+        </form>
           <li class="nav-item">
             <a class="nav-link" href="{% url 'home' %}">Home</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="{% url 'show_guitars' %}">Shop</a>
           </li>
+          {% if user.is_authenticated %}
           <li class="nav-item">
             <a class="nav-link" href="{% url 'create_guitars' %}">Sell</a>
           </li>
+          {% endif %}
           <li class="nav-item">
             <a class="nav-link" href="{% url 'about_us' %}">About Us</a>
           </li>
@@ -69,8 +75,8 @@
           </div>
         </div>
       </div>
-    </div>
   </nav>
+    </div>
 
   <div class='container'>
     {%block content%}{%endblock%}
