--- a/templates/base.html
+++ b/templates/base.html
@@ -18,7 +18,8 @@
 
 <body>
     <div class="container-fluid">
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+      
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <img class="nav-item" src="/static/images/JG logo.png" alt="#"></a>
       <a class="navbar-brand" href="{% url 'home' %}">Jimbo Guitars</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
@@ -32,7 +33,7 @@
           <!--</form>-->
           <form method="GET" class="form-inline" action="{% url 'show_guitars' %}">
           <input name="search_terms" class="form-control mr-sm-2" type="search" placeholder="Search for Guitars">
-          <button class="btn btn-outline-success" type="submit"><i class="fas fa-search"></i></button>
+          <button class="btn btn-outline-success search_button" type="submit"><i class="fas fa-search"></i></button>
         </form>
           <li class="nav-item">
             <a class="nav-link" href="{% url 'home' %}">Home</a>
@@ -76,7 +77,7 @@
         </div>
       </div>
   </nav>
-    </div>
+      </div>
 
   <div class='container'>
     {%block content%}{%endblock%}
