--- a/templates/base.html
+++ b/templates/base.html
@@ -17,8 +17,8 @@
 </head>
 
 <body>
-    <div class="container-fluid">
-      
+  
+  <!--<div class="container-fluid">-->
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <img class="nav-item" src="/static/images/JG logo.png" alt="#"></a>
       <a class="navbar-brand" href="{% url 'home' %}">Jimbo Guitars</a>
@@ -77,7 +77,7 @@
         </div>
       </div>
   </nav>
-      </div>
+      <!--</div>-->
 
   <div class='container'>
     {%block content%}{%endblock%}
