--- a/static/style/styles.css
+++ b/static/style/styles.css
@@ -10,7 +10,7 @@
         		Theme Elements
 *********************************************/
 
-.gold{
+.gold {
 	color: #FFBF00;
 }
 
@@ -18,39 +18,39 @@
 					PRODUCTS
 *********************************************/
 
-.product{
+.product {
 	height: 321px;
 }
 
-.product>img{
+.product>img {
 	max-width: 230px;
 }
 
-.product-rating{
+.product-rating {
 	font-size: 20px;
 	margin-bottom: 25px;
 }
 
-.product-title{
+.product-title {
 	font-size: 20px;
 }
 
-.product-desc{
+.product-desc {
 	font-size: 14px;
 }
 
-.product-price{
+.product-price {
 	font-size: 22px;
 }
 
-.product-stock{
+.product-stock {
 	color: #74DF00;
 	font-size: 20px;
 	margin-top: 10px;
 }
 
-.product-info{
-		margin-top: 50px;
+.product-info {
+	margin-top: 50px;
 }
 
 /*********************************************
@@ -67,7 +67,7 @@
 	border-radius: 0px;
 }
 
-.container-fluid{
+.container-fluid {
 	max-width: 1140px;
 	margin: 0 auto;
 }
@@ -110,7 +110,7 @@
 	border-bottom: 1px solid #DDD;
 }
 
-.service1-item > img {
+.service1-item>img {
 	max-height: 110px;
 	max-width: 110px;
 	opacity: 0.6;
@@ -120,7 +120,7 @@
 	-webkit-transition: all .2s ease-in;
 }
 
-.service1-item > img:hover {
+.service1-item>img:hover {
 	cursor: pointer;
 	opacity: 1;
 }
@@ -133,7 +133,8 @@
 	padding-left: 50px;
 }
 
-.service-image-left > center > img,.service-image-right > center > img{
+.service-image-left>center>img,
+.service-image-right>center>img {
 	max-height: 300px;
 }
 
@@ -141,17 +142,19 @@
 /* Jimbo's*/
 
 /*navbar*/
+
 .dropdown-menu a {
 	color: black;
 }
 
 /*homepage*/
+
 .list-group a {
 	color: black;
 	border: 1px solid black;
 }
 
-.guitar_shop .card  {
+.guitar_shop .card {
 	margin: 1rem;
 	border: none;
 }
@@ -162,19 +165,30 @@
 	/*margin-left: 3.5rem;*/
 }
 
+/*about_us page*/
+
+.about_us {
+	margin: 2rem;
+}
+
+.about_us img {
+	width: 100%;
+	margin-bottom: 1rem
+}
+
 /*.cart .card img {*/
+
 /*	width: 50%;*/
+
 /*}*/
 
-
-
 @media (min-width: 320px) and (max-width: 575px) {
-    .navbar input {
-        width: 80%;
-    }
-    .navbar .search_button {
-    	margin-left: 5px;
-    }
+	.navbar input {
+		width: 80%;
+	}
+	.navbar .search_button {
+		margin-left: 5px;
+	}
 }
 
 @media (min-width: 320px) and (max-width: 767px) {
@@ -184,10 +198,21 @@
 }
 
 @media (min-width: 768px) {
-	.guitar_shop .card  {
+	.guitar_shop .card {
 		margin: 4rem;
 		/*border: none;*/
 	}
+
+	.about_us {
+		margin: 4rem;
+	}
+}
+
+@media (min-width: 1024px) {
+.about_us {
+	margin: 6rem;
+}
+
 }
 
 @media (min-width: 2000px) {
@@ -195,4 +220,3 @@
 		margin-left: 8rem;
 	}
 }
-
