--- a/templates/guitar_info.html
+++ b/templates/guitar_info.html
@@ -1,8 +1,8 @@
-{% extends "base.html" %} 
+<!--{% extends "base.html" %} -->
 
-{% block content %} 
+<!--{% block content %} -->
 
-guitars
+<!--guitars-->
 
 
-{% endblock %}
+<!--{% endblock %}-->
