--- a/templates/view_cart.html
+++ b/templates/view_cart.html
@@ -1,32 +1,37 @@
 {% extends 'base.html' %} {%block content %}
 
 <div class="cart">
-    <h1>Your Cart</h1>
-    
-    {%for id,guitar in shopping_cart.items %}
-    
-    <div class="card" style="width: 18rem;">
-        <img src="{{guitar.image_url}}" class="card-img-top" alt="...">
-        <div class="card-body">
-            <h5 class="card-title">{{guitar.brand}}</h5>
-            <p class="card-text">${{guitar.cost}}</p>
+  <div class="guitar_cart">
+    <div class="row">
+      {%for id,guitar in shopping_cart.items %}
+      <div class="col-md-6 col-lg-4">
+        <div class="card">
+          <div class="card-image">
+            <img src="{{guitar.image_url}}">
+          </div>
+          <div class="card-content">
+            <p>{{guitar.brand}}</p>
+            <p>${{guitar.cost}}</p>
             <form class="form-inline" method="post" action="{% url 'adjust_cart' guitar_id=guitar.id %}">
-                {% csrf_token %}
-                <div class="form-group">
-                    <label for="exampleInputAmount" class="sr-only">New Qty</label>
-                    <div class="input-group">
-                        <div class="input-group-addon cart_div">Quantity:&nbsp&nbsp&nbsp</div>
-                        <input name="quantity" type="number" min="1" max="10" class="form-control" id="input_width" value="{{guitar.quantity}}">
-                    </div>
+              {% csrf_token %}
+              <div class="form-group">
+                <label for="exampleInputAmount" class="sr-only">New Qty</label>
+                <div class="input-group">
+                  <div class="input-group-addon cart_div">Quantity:&nbsp&nbsp&nbsp</div>
+                  <input name="quantity" type="number" min="1" max="10" class="form-control" id="input_width" value="{{guitar.quantity}}">
                 </div>
-                <button type="submit" class="btn btn-primary ml-1" id="cart_btn_primary_id"><span class="glyphicon glyphicon-edit" aria-hidden="true"></span> &nbsp; Apply</button>
+              </div>
+              <button type="submit" class="btn btn-primary ml-2 apply_btn" id="cart_btn_primary_id"><span class="glyphicon glyphicon-edit" aria-hidden="true"></span> &nbsp; Apply</button>
             </form>
-
-            <a href="{% url 'remove_from_cart' guitar_id=guitar.id %}" class="btn btn-danger mt-1">Remove from Cart</a> 
+          </div>
+          <div class="row">
+            <a href="{% url 'remove_from_cart' guitar_id=guitar.id %}" class="btn btn-danger mt-1 remove_btn">Remove from Cart</a>
+          </div>
         </div>
+      </div>
+      {% endfor %}
     </div>
-    {%endfor%}
-            <a href="{% url 'checkout' %}" class="btn btn-success">CHECKOUT</a>
-</div>
-
-{%endblock %}
+    <div class="checkout_btn">
+  <a href="{% url 'checkout' %}" class="btn btn-success">CHECKOUT</a> {%endblock %}
+  </div>
+  </div>
