--- a/templates/base.html
+++ b/templates/base.html
@@ -10,7 +10,8 @@
   <meta name="author" content="">
 
   <title>Jimbo Guitars</title>
-
+  
+  <link rel="icon" href="{% static 'images/JG logo.png' %}" type="image/x-icon" />
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous" />
   <link rel="stylesheet" href="{% static 'style/styles.css' %}" type="text/css" />
