--- a/templates/show_guitars.html
+++ b/templates/show_guitars.html
@@ -23,7 +23,7 @@
 					<h4 class="card-title">{{guitar.color}}</h4>
 					<div class="product-rating"><i class="fa fa-star gold"></i> <i class="fa fa-star gold"></i> <i class="fa fa-star gold"></i> <i class="fa fa-star gold"></i> <i class="fa fa-star-o"></i>
 					</div>
-					<div class="product-price">${{guitar.cost}}</div>
+					<div class="product-price">${{guitar.cost|floatformat:2}}</div>
 					<div class="product-stock">In Stock</div>
 					<p class="card-text">{{guitar.desc}}</p>
 					<div class="btn-group">
