--- a/templates/registration/password_reset_form.html
+++ b/templates/registration/password_reset_form.html
@@ -2,18 +2,23 @@
 
 {% block content %}
 
+{% load crispy_forms_tags %} 
+
 <div class="password_reset_form">
 <p>Forgotten your password? Enter your email address below, and we’ll email instructions for setting a new one.</p>
 
-<form method="post">{% csrf_token %}
-<fieldset class="module aligned">
+<form method="post">
+    {% csrf_token %}
+<!--<fieldset class="module aligned">-->
     <div class="form-row field-email">
-        {{ form.email.errors }}
-        <label for="id_email">Email address:</label>
+        
+        
+        {{ form.email.label_tag }}
         {{ form.email }}
+
     </div>
-    <input type="submit" value="Reset my password">
-</fieldset>
+    <input type="submit" value="Reset my password" class="btn btn-success password_reset_btn">
+<!--</fieldset>-->
 </form>
 </div>
 {% endblock %}
