--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -27,7 +27,7 @@
                 </tr>
             </table>
 
-            <input type="submit" value="login" class="btn btn-success login_btn">
+            <input type="submit" value="Login" class="btn btn-success login_btn">
             <input type="hidden" name="next" value="{{ next }}">
         </form>
 
