--- a/users/templates/users/signup.html
+++ b/users/templates/users/signup.html
@@ -3,12 +3,14 @@
 {% load crispy_forms_tags %}
 
 {% block content %}
-<div class="signup">
+
+
+<div class="signup_form">
   <h2>Sign up</h2>
   <form method="post">
     {% csrf_token %}
     {{ form|crispy }}
-    <button type="submit">Sign up</button>
+    <button type="submit" class="btn btn-success signup_btn">Sign up</button>
   </form>
   </div>
 {% endblock %}
