--- a/templates/registration/password_reset_form.html
+++ b/templates/registration/password_reset_form.html
@@ -5,6 +5,7 @@
 {% load crispy_forms_tags %} 
 
 <div class="password_reset_form">
+    <h2>Password Reset</h2>
 <p>Forgotten your password? Enter your email address below, and we’ll email instructions for setting a new one.</p>
 
 <form method="post">
